<resources>
    <string name="app_name">Drive Analyzer</string>
    <string name="bottom_recording">Recording</string>
    <string name="bottom_history">History</string>
    <string name="bottom_settings">Settings</string>
    <string name="RecordingFragment_start_button">Click and start analyze</string>
    <string name="RecordingFragment_stop_button">stop</string>
    <string name="RecordingFragment_gps_disabled">GPS has been disabled</string>
    <string name="MainActivity_gps_permission_needed">Application needs GPS to work</string>
    <string name="MainActivity_allow">allow</string>
    <string name="MainActivity_gps_needed">Application needs GPS to work</string>
    <string name="MainActivity_enable">enable</string>
    <string name="RecordingLayout_time">time</string>
    <string name="RecordingLayout_distance">distance</string>
    <string name="RecordingLayout_actual_speed">actual speed</string>
    <string name="RecordingLayout_avg_speed">avg speed</string>
    <string name="RecordingLayout_gyroscope">gyroscope</string>
    <string name="RecordingLayout_accelerometer">accelerometer</string>
    <string name="RecordingLayout_magnetometer">magnetometer</string>
    <string name="RecordingLayout_summary">summary</string>
    <string name="RecordingLayout_sensor_data">sensor data</string>
    <string name="BluetoothConnector_choose_device">Choose Bluetooth device</string>
    <string name="BluetoothConnector_device_not_in_range">Device not in range.</string>
    <string name="BluetoothConnector_not_obd_device">Connected device is not OBD-II device.</string>
    <string name="MainActivity_bluetooth_enabled">Bluetooth is already enabled</string>
    <string name="MainActivity_obd_ii">OBD-II</string>
    <string name="MainActivity_obd_question">Do you want to use OBD-II system?</string>
    <string name="MainAcitvity_yes">YES</string>
    <string name="MainActivity_no">NO</string>
    <string name="GearFragment_start">start gear analyze</string>
    <string name="GearLayout_idle">idle</string>
    <string name="GearLayout_stop_button">stop</string>
    <string name="BluetoothConnector_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="GearFragment_saved">Value saved</string>
    <string name="GearFragment_undo">undo</string>
</resources>
