<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_recording"
        android:enabled="true"
        android:icon="@drawable/ic_car_white_24dp"
        android:title="@string/bottom_recording"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/bottom_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/bottom_settings"
        app:showAsAction="ifRoom" />
</menu>